samples/_failures_safe/1761073321_e3101b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a856957.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_9a856957.c:185:38: error: expected ‘;’ at end of input
  185 |                     neighbor->visited
      |                                      ^
      |                                      ;
./samples/SAFE/__tmp_9a856957.c:185:21: error: expected declaration or statement at end of input
  185 |                     neighbor->visited
      |                     ^~~~~~~~
./samples/SAFE/__tmp_9a856957.c:185:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a856957.c:185:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a856957.c:185:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a856957.c:185:21: error: expected declaration or statement at end of input
